Added all sections

--- a/CNA-Rules.adoc
+++ b/CNA-Rules.adoc
@@ -110,3 +110,67 @@ include::section-31.adoc[]
 include::section-32.adoc[]
 
 include::section-33.adoc[]
+
+include::section-34.adoc[]
+
+include::section-35.adoc[]
+
+include::section-36.adoc[]
+
+include::section-37.adoc[]
+
+include::section-38.adoc[]
+
+include::section-39.adoc[]
+
+include::section-40.adoc[]
+
+include::section-41.adoc[]
+
+include::section-42.adoc[]
+
+include::section-43.adoc[]
+
+include::section-44.adoc[]
+
+include::section-45.adoc[]
+
+include::section-46.adoc[]
+
+include::section-47.adoc[]
+
+include::section-48.adoc[]
+
+include::section-49.adoc[]
+
+include::section-50.adoc[]
+
+include::section-51.adoc[]
+
+include::section-52.adoc[]
+
+include::section-53.adoc[]
+
+include::section-54.adoc[]
+
+include::section-55.adoc[]
+
+include::section-56.adoc[]
+
+include::section-57.adoc[]
+
+include::section-58.adoc[]
+
+include::section-59.adoc[]
+
+include::section-60.adoc[]
+
+include::section-61.adoc[]
+
+include::section-62.adoc[]
+
+include::section-63.adoc[]
+
+include::section-64.adoc[]
+
+include::section-65.adoc[]
